gitops/apps/dev/workloads/manifests/postgresql/ingressroutetcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: postgresql
  namespace: dev-apps
  labels:
    app.kubernetes.io/name: postgresql
    homelab.io/environment: dev
    homelab.io/component: database
spec:
  entryPoints:
    - postgres
  routes:
    - match: HostSNI(`*`)
      middlewares:
        - name: postgresql-lan-allowlist
      services:
        - name: postgresql
          port: 5432
